<resources>
    <string name="app_name">Chatter</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="log_out">Log out</string>
    <string name="account_settings">Account Settings</string>
    <string name="create_your_new_account">Create Your New Account</string>
    <string name="welcome_activity">Welcome activity</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="user_profile_image">User profile image</string>
    <string name="default_name">Default Name</string>
    <string name="description">Description</string>
    <string name="save_changes">Save Changes</string>
</resources>